...
            <TextView
                    android:text="REGISTREREN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/textView2"
                    android:textColor="@color/white"
                    android:textAlignment="center" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginTitel"/>

            <EditText android:id="@+id/register_email"
                      android:layout_width="0dp"
...
